--- a/TransformTool.ui
+++ b/TransformTool.ui
@@ -6,42 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>338</width>
-    <height>160</height>
+    <width>365</width>
+    <height>164</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Tansform Tool</string>
+   <string>Transform Tool</string>
   </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>311</width>
+     <width>341</width>
      <height>111</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="1">
-     <widget class="QSlider" name="xTranslationSlider">
-      <property name="autoFillBackground">
-       <bool>false</bool>
-      </property>
-      <property name="minimum">
-       <number>-100</number>
-      </property>
-      <property name="maximum">
-       <number>100</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="tickPosition">
-       <enum>QSlider::NoTicks</enum>
-      </property>
-      <property name="tickInterval">
-       <number>0</number>
+    <item row="1" column="2">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>Rotation (Degrees)</string>
       </property>
      </widget>
     </item>
@@ -172,7 +157,7 @@
     <item row="1" column="1">
      <widget class="QLabel" name="label_6">
       <property name="text">
-       <string>Position</string>
+       <string>Position (Angstroms)</string>
       </property>
      </widget>
     </item>
@@ -183,39 +168,73 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
-     <widget class="QLabel" name="label_5">
-      <property name="text">
-       <string>Rotation</string>
+    <item row="2" column="1">
+     <widget class="QSlider" name="xTranslationSlider">
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
+      <property name="minimum">
+       <number>-100</number>
+      </property>
+      <property name="maximum">
+       <number>100</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="tickPosition">
+       <enum>QSlider::NoTicks</enum>
+      </property>
+      <property name="tickInterval">
+       <number>0</number>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="resetTransform">
-   <property name="geometry">
-    <rect>
-     <x>270</x>
-     <y>130</y>
-     <width>51</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Reset</string>
-   </property>
-  </widget>
   <widget class="QComboBox" name="selectionComboBox">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>190</x>
      <y>130</y>
-     <width>251</width>
+     <width>161</width>
      <height>22</height>
     </rect>
    </property>
    <property name="insertPolicy">
     <enum>QComboBox::InsertAlphabetically</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>130</y>
+     <width>121</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Position slider min/max:</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="positionSpinBox">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>130</y>
+     <width>41</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>1</number>
+   </property>
+   <property name="maximum">
+    <number>100</number>
+   </property>
+   <property name="value">
+    <number>10</number>
    </property>
   </widget>
  </widget>
